--- a/ui/components/separator/separator.css
+++ b/ui/components/separator/separator.css
@@ -1,7 +1,7 @@
 ui-separator{
   --separator-thickness:1px;
   --separator-spacing:0;
-  --separator-color:var(--surface-color-secondary);
+  --separator-color:var(--line-color);
   display:block;
   background-color:var(--separator-color);
 
