--- a/ui/components/tabs/tabs.css
+++ b/ui/components/tabs/tabs.css
@@ -8,15 +8,13 @@ ui-tabs{
   --tabs-tab-surface-color-hover:var(--surface-color-hover);
   --tabs-tab-surface-color-active:var(--surface-color-active);
 
-  --tabs-tab-content-color-default:var(--content-color-default);
-  --tabs-tab-content-color-hover:var(--content-color-hover);
-  --tabs-tab-content-color-active:var(--content-color-active);
+  --tabs-tab-fg:var(--content-color-default);
 
   --tabs-tabpanel-padding-inline:20px;
   --tabs-tabpanel-padding-block:16px;
 
-  --tabs-tabpanel-surface-color:var(--panel-color-default);
-  --tabs-tabpanel-content-color:var(--content-color-default);
+  --tabs-tabpanel-bg:var(--surface-bg);
+  --tabs-tabpanel-fg:var(--content-color-default);
 
   display:flex;
   flex-direction:column;
@@ -59,13 +57,11 @@ ui-tabs{
     @media (hover: hover){
       &:not([data-selected]):not([disabled]):hover{
         background-color:var(--tabs-tab-surface-color-hover);
-        color:var(--tabs-tab-content-color-hover);
       }
     }
 
     &:not([data-selected]):not([disabled]):active,
     &[data-selected]:not([disabled]){
-      color:var(--tabs-tab-content-color-active);
       background-color:var(--tabs-tab-surface-color-active);
     }
   }
@@ -77,7 +73,7 @@ ui-tabs{
     padding-inline:var(--tabs-tabpanel-padding-inline);
     padding-block:var(--tabs-tabpanel-padding-block);
     color:var(--tabs-tabpanel-content-color);
-    background-color:var(--tabs-tabpanel-surface-color);
+    background-color:var(--tabs-tabpanel-bg);
 
     & > :is(ul,ol,p):first-child{margin-top:0;}
     & > :is(ul,ol,p):last-child{margin-bottom:0;}
