--- a/ui/styles/colors.css
+++ b/ui/styles/colors.css
@@ -1,64 +1,64 @@
 :root{
-  --color-white: oklch(1 0 0);
-  --color-black: oklch(0 0 0);
+  --color-white: oklch(100% 0 0);
+  --color-black: oklch(0% 0 0);
 
-  --color-neutral-50: oklch(98.5% 0 0);
-  --color-neutral-100: oklch(97% 0 0);
-  --color-neutral-200: oklch(92.2% 0 0);
-  --color-neutral-300: oklch(87% 0 0);
-  --color-neutral-400: oklch(70.8% 0 0);
-  --color-neutral-500: oklch(55.6% 0 0);
-  --color-neutral-600: oklch(43.9% 0 0);
-  --color-neutral-700: oklch(37.1% 0 0);
-  --color-neutral-800: oklch(26.9% 0 0);
-  --color-neutral-900: oklch(20.5% 0 0);
-  --color-neutral-950: oklch(14.5% 0 0);
+  --color-gray-95: oklch(96.067% 0.00172 247.84);
+  --color-gray-90: oklch(92.228% 0.0055 274.96);
+  --color-gray-80: oklch(83.641% 0.00994 273.33);
+  --color-gray-70: oklch(75.183% 0.01604 273.78);
+  --color-gray-60: oklch(66.863% 0.02088 276.18);
+  --color-gray-50: oklch(56.418% 0.02359 273.77);
+  --color-gray-40: oklch(46.281% 0.02644 274.26);
+  --color-gray-30: oklch(39.355% 0.02564 276.27);
+  --color-gray-20: oklch(31.97% 0.02354 274.82);
+  --color-gray-10: oklch(23.277% 0.01762 275.14);
+  --color-gray-05: oklch(18.342% 0.01472 272.42);
 
-  --color-red-50: oklch(0.971 0.013 17.38);
-  --color-red-100: oklch(0.936 0.032 17.717);
-  --color-red-200: oklch(0.885 0.062 18.334);
-  --color-red-300: oklch(0.808 0.114 19.571);
-  --color-red-400: oklch(0.704 0.191 22.216);
-  --color-red-500: oklch(0.637 0.237 25.331);
-  --color-red-600: oklch(0.577 0.245 27.325);
-  --color-red-700: oklch(0.505 0.213 27.518);
-  --color-red-800: oklch(0.444 0.177 26.899);
-  --color-red-900: oklch(0.396 0.141 25.723);
-  --color-red-950: oklch(0.258 0.092 26.042);
+  --color-red-95: oklch(96.667% 0.01632 22.08);
+  --color-red-90: oklch(92.735% 0.03679 21.966);
+  --color-red-80: oklch(84.803% 0.08289 20.771);
+  --color-red-70: oklch(76.801% 0.13322 20.052);
+  --color-red-60: oklch(68.914% 0.17256 20.646);
+  --color-red-50: oklch(58.857% 0.20512 20.223);
+  --color-red-40: oklch(48.737% 0.19311 18.413);
+  --color-red-30: oklch(41.17% 0.1512 16.771);
+  --color-red-20: oklch(33.297% 0.11208 14.847);
+  --color-red-10: oklch(24.329% 0.08074 15.207);
+  --color-red-05: oklch(19.016% 0.06394 13.71);
 
-  --color-green-50: oklch(0.982 0.018 155.826);
-  --color-green-100: oklch(0.962 0.044 156.743);
-  --color-green-200: oklch(0.925 0.084 155.995);
-  --color-green-300: oklch(0.871 0.15 154.449);
-  --color-green-400: oklch(0.792 0.209 151.711);
-  --color-green-500: oklch(0.723 0.219 149.579);
-  --color-green-600: oklch(0.627 0.194 149.214);
-  --color-green-700: oklch(0.527 0.154 150.069);
-  --color-green-800: oklch(0.448 0.119 151.328);
-  --color-green-900: oklch(0.393 0.095 152.535);
-  --color-green-950: oklch(0.266 0.065 152.934);
+  --color-green-95: oklch(96.006% 0.03715 145.28);
+  --color-green-90: oklch(91.494% 0.08233 144.35);
+  --color-green-80: oklch(82.445% 0.11601 146.11);
+  --color-green-70: oklch(73.554% 0.15308 147.59);
+  --color-green-60: oklch(64.982% 0.18414 148.83);
+  --color-green-50: oklch(54.765% 0.15165 149.77);
+  --color-green-40: oklch(45.004% 0.11963 151.06);
+  --color-green-30: oklch(37.988% 0.09487 151.62);
+  --color-green-20: oklch(30.876% 0.07202 152.23);
+  --color-green-10: oklch(22.767% 0.05128 152.45);
+  --color-green-05: oklch(17.84% 0.03957 151.36);
 
-  --color-blue-50: oklch(0.97 0.014 254.604);
-  --color-blue-100: oklch(0.932 0.032 255.585);
-  --color-blue-200: oklch(0.882 0.059 254.128);
-  --color-blue-300: oklch(0.809 0.105 251.813);
-  --color-blue-400: oklch(0.707 0.165 254.624);
-  --color-blue-500: oklch(0.623 0.214 259.815);
-  --color-blue-600: oklch(0.546 0.245 262.881);
-  --color-blue-700: oklch(0.488 0.243 264.376);
-  --color-blue-800: oklch(0.424 0.199 265.638);
-  --color-blue-900: oklch(0.379 0.146 265.522);
-  --color-blue-950: oklch(0.282 0.091 267.935);
+  --color-blue-95: oklch(95.944% 0.01996 250.38);
+  --color-blue-90: oklch(92.121% 0.03985 248.26);
+  --color-blue-80: oklch(83.572% 0.08502 249.92);
+  --color-blue-70: oklch(75.256% 0.1308 252.03);
+  --color-blue-60: oklch(67.196% 0.17661 254.97);
+  --color-blue-50: oklch(56.972% 0.20461 257.29);
+  --color-blue-40: oklch(47.175% 0.1846 259.19);
+  --color-blue-30: oklch(39.805% 0.16217 259.98);
+  --color-blue-20: oklch(32.436% 0.1349 260.35);
+  --color-blue-10: oklch(23.965% 0.10161 260.68);
+  --color-blue-05: oklch(18.565% 0.07904 260.75);
 
-  --color-yellow-50: oklch(0.987 0.026 102.212);
-  --color-yellow-100: oklch(0.973 0.071 103.193);
-  --color-yellow-200: oklch(0.945 0.129 101.54);
-  --color-yellow-300: oklch(0.905 0.182 98.111);
-  --color-yellow-400: oklch(0.852 0.199 91.936);
-  --color-yellow-500: oklch(0.795 0.184 86.047);
-  --color-yellow-600: oklch(0.681 0.162 75.834);
-  --color-yellow-700: oklch(0.554 0.135 66.442);
-  --color-yellow-800: oklch(0.476 0.114 61.907);
-  --color-yellow-900: oklch(0.421 0.095 57.708);
-  --color-yellow-950: oklch(0.286 0.066 53.813);
+  --color-yellow-95: oklch(96.322% 0.05069 93.748);
+  --color-yellow-90: oklch(92.377% 0.10246 91.296);
+  --color-yellow-80: oklch(84.185% 0.16263 85.991);
+  --color-yellow-70: oklch(75.949% 0.16251 72.13);
+  --color-yellow-60: oklch(67.883% 0.15587 62.246);
+  --color-yellow-50: oklch(57.449% 0.13836 56.585);
+  --color-yellow-40: oklch(47.319% 0.11666 54.663);
+  --color-yellow-30: oklch(40.012% 0.09892 54.555);
+  --color-yellow-20: oklch(32.518% 0.08157 53.927);
+  --color-yellow-10: oklch(23.846% 0.05834 56.02);
+  --color-yellow-05: oklch(18.585% 0.04625 54.588);
 }
