--- a/ui/styles/modes/light.css
+++ b/ui/styles/modes/light.css
@@ -1,47 +1,36 @@
 :root[data-mode='light']{
   /* backgrounds */
-  --body-background-color:var(--color-neutral-50);
-  --header-background-color:var(--color-neutral-50);
+  --bg-base:oklch(97.5% 0 0);
 
-  /* surface neutral */
-  --surface-color-primary:var(--color-neutral-300);
-  --surface-color-hover:color-mix(
-    in oklch,
-    var(--color-neutral-300),
-    var(--color-neutral-200) 50%
-  );
-  --surface-color-active:color-mix(
-    in oklch,
-    var(--color-neutral-300),
-    var(--color-neutral-400) 20%
-  );
-  --surface-color-secondary:var(--color-neutral-200);
-  --surface-color-tertiary:var(--color-neutral-100);
-  --surface-color-default:var(--surface-color-primary);
-
-  /* border */
-  --border-color:var(--color-neutral-300);
-
-  /* panel */
-  --panel-color-default:var(--color-neutral-200);
-
-  /* menu */
-  --menu-background-color-hover:var(--color-neutral-200);
-  --menu-background-color-active:var(--color-neutral-300);
-
-  /* text */
-  --text-color-default:var(--color-neutral-950);
-  --text-color-secondary:var(--color-neutral-600);
+  /* foregrounds */
+  --fg-base:var(--color-black);
+  --fg-muted:var(--color-neutral-35);
 
   /* link */
-  --link-color-default:var(--color-neutral-700);
-  --link-color-hover:var(--color-neutral-800);
-  --link-color-active:var(--color-neutral-950);
+  --link-color:var(--color-neutral-600);
+  --link-color-hover:var(--color-neutral-600);
+  --link-color-active:var(--color-neutral-800);
+
+  /* surface */
+  --surface-bg:var(--color-neutral-200);
+
+  /* surface */
+  --control-color-default:var(--color-gray-60);
+  --control-color-info:var(--color-blue-60);
+  --control-color-success:var(--color-green-60);
+  --control-color-warning:var(--color-yellow-60);
+  --control-color-danger:var(--color-red-60);
+
+  --control-state:oklch(1 0 0 / 0);
+  --control-state-hover:oklch(1 0 0 / 0.12);
+  --control-state-active:oklch(0 0 0 / 0.08);
+
+  /* lines */
+  --line-color:oklch(90% 0 0);
 
   /* outline */
-  --outline-color:var(--color-blue-500);
+  --outline-color:oklch(60% 0.22 255);
 
   /* scrollbar */
-  --scrollbar-color:var(--color-neutral-400);
+  --scrollbar-color:oklch(85% 0 0);
 }
-/* accent warning danger success */
