--- a/ui/styles/typography.css
+++ b/ui/styles/typography.css
@@ -29,6 +29,12 @@
   --line-height-condensed:1.2;
   --line-height-normal:1.5;
   --line-height-expanded:2;
+
+  /* text align */
+  --text-align-start:start;
+  --text-align-end:end;
+  --text-align-center:center;
+  --text-align-justify:justify;
 }
 
 /* body */
@@ -66,13 +72,13 @@ a{
 
 /* normalize lists */
 ul,ol{
-  margin:0;
+  margin-inline:0;
   padding:0;
   padding-inline-start:2rem;
 }
 
 /* remove trailing paragraph spacing */
-p:last-child{
+:is(ul,ol,p):last-child{
   margin-block-end:0;
 }
 
